Implement conversion from local deadline in client's time zone to UTC and back when editing problem sets